@@ -3,6 +3,7 @@
  - CID 60867 : fix Coverity issue : EC: Comparing incompatible types for equality
  - CID 60866, 60868 : fix Coverity issue : Casting from integer values
  - issue #147 : introduce CircularAverage class to make sensor based orientation value less jumpy
+ - rename FormatUtils.CIRCLE_* constants
 
  v0.2 (released on 26Apr2014)
  - issue #112 : update ic_launcher-web.png icon
